<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Gracani">

    <EditText
        android:id="@+id/imeUcenika"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/listaGracani"
        android:layout_alignTop="@+id/prezimeUcenika"
        android:ems="10"
        android:hint="@string/ucenik_ime"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/prezimeUcenika"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/listaGracani"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="148dp"
        android:ems="10"
        android:hint="@string/ucenik_prezime"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/aktivnostUcenika"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/listaGracani"
        android:layout_alignTop="@+id/rataUcenika"
        android:ems="10"
        android:hint="@string/ucenik_aktivnost"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/rataUcenika"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/listaGracani"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="92dp"
        android:ems="10"
        android:hint="@string/ucenik_rata"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/dodajUcenika"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        android:onClick="gumbPritisnut"
        android:text="Dodaj Učenika" />

    <ListView
        android:id="@+id/listaGracani"
        android:layout_width="360dp"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp" />

</RelativeLayout>